[ios] feat: add iCloud entitlements
Signed-off-by: Kiryl Kaveryn <kirylkaveryn@gmail.com>

--- a/iphone/Maps/OMaps.plist
+++ b/iphone/Maps/OMaps.plist
@@ -252,5 +252,26 @@
 			</dict>
 		</dict>
 	</array>
+	<key>NSUbiquitousContainers</key>
+	<dict>
+		<key>iCloud.app.organicmaps</key>
+		<dict>
+			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
+			<true/>
+			<key>NSUbiquitousContainerSupportedFolderLevels</key>
+			<string>ANY</string>
+			<key>NSUbiquitousContainerName</key>
+			<string>OrganicMaps</string>
+		</dict>
+		<key>iCloud.app.organicmaps.debug</key>
+		<dict>
+			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
+			<true/>
+			<key>NSUbiquitousContainerSupportedFolderLevels</key>
+			<string>ANY</string>
+			<key>NSUbiquitousContainerName</key>
+			<string>OrganicMapsDEBUG</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
