--- a/.github/workflows/ios-check.yaml
+++ b/.github/workflows/ios-check.yaml
@@ -68,14 +68,29 @@ jobs:
           key: xcode-cache-deriveddata-${{ github.workflow }}-${{ matrix.buildType }}-${{ github.sha }}
           restore-keys: xcode-cache-deriveddata-${{ github.workflow }}-${{ matrix.buildType }}
 
-      - name: Compile
+      - name: Build and Run Tests (Debug)
+        if: matrix.buildType == 'Debug'
         shell: bash
-        # Check for compilation errors.
         run: |
-          xcodebuild \
+          xcodebuild test \
             -workspace xcode/omim.xcworkspace \
             -scheme OMaps \
-            -configuration ${{ matrix.buildType }} build \
-            'generic/platform=iOS' \
+            -configuration Debug \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+            -quiet \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
+
+      - name: Build (Release)
+        if: matrix.buildType == 'Release'
+        shell: bash
+        run: |
+          xcodebuild build \
+            -workspace xcode/omim.xcworkspace \
+            -scheme OMaps \
+            -configuration Release \
+            -destination 'generic/platform=iOS' \
+            -quiet \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
